--- a/TheBookDenWeb/Views/_ViewImports.cshtml
+++ b/TheBookDenWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using TheBookDenWeb
-@using TheBookDenWeb.Models
+@using TheBookDen.Models.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
