Repository pattern implemented

--- a/TheBookDenWeb/Views/Shared/_Layout.cshtml
+++ b/TheBookDenWeb/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
     </div>
 
     <footer class="border-top footer bg-primary text-muted">
-        <div class="text-center">
-            Made with <i class="bi bi-heart-fill"></i> by Chamara Walaliyadde  &copy; 2024 - The BookDen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="text-center text-white-50">
+            Made with <i class="bi bi-heart-fill "></i> by Chamara Walaliyadde  &copy; 2024 - The BookDen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
