--- a/TheBookDenWeb/Areas/Admin/Views/Category/Delete.cshtml
+++ b/TheBookDenWeb/Areas/Admin/Views/Category/Delete.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Delete</button>
+                        <button type="submit" class="btn btn-danger form-control">Delete</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Category" asp-action="Index" class="btn btn-outline-primary border form-control"> Back To List</a>
