--- a/TheBookDenWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/TheBookDenWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,41 +18,22 @@
                 </a>
             </div>
             </div>
-            <table class="table table-bordered table-striped">
+            <table id="tblData" class="table table-bordered table-striped" style="width:100%">
                 <thead>
                     <tr>
                         <th>Title</th>
-                        <th>ISBN</th>                         
+                        <th>ISBN</th>
                         <th>Price</th>
                         <th>Author</th>
                         <th>Category</th>
                         <th></th>
                     </tr>
                 </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>@item.Title</td>
-                            <td>@item.ISBN</td>
-                            <td>@item.ListPrice</td>
-                            <td>@item.Author</td>
-                        <td>
-                                <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="Product" asp-action="Upsert" asp-route-id="@item.Id" class="btn btn-primary mx-2">
-                                        <i class="bi bi-pencil-square"></i> Edit
-                                    </a>
-                                    <a asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger mx-2">
-                                        <i class="bi bi-trash-fill"></i> Delete
-                                    </a>
-                                </div>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
             </table>
         </div>
 </div>
 
-
+@section Scripts {
+    <script src="~/js/product.js"></script>
+}
 
