--- a/TheBookDenWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/TheBookDenWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using TheBookDenWeb.Areas.Identity
 @using TheBookDenWeb.Areas.Identity.Pages
+@using TheBookDen.Utility;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
