--- a/TheBookDenWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/TheBookDenWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TheBookDenWeb
 @using TheBookDen.Models.Models
 @using TheBookDen.Models.ViewModels
+@using TheBookDen.Utility;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
